--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spring": "8.0.5",
+    "react-text-loop": "^2.3.0",
+    "react-transition-group": "1.x",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
