--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^17.0.11",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-spring": "8.0.5",
         "react-text-loop": "^2.3.0",
