--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.4.0",
-        "@types/node": "^16.11.21",
+        "@types/node": "^17.0.21",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "marked": "^4.0.12",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
@@ -46,6 +47,7 @@
         ]
     },
     "devDependencies": {
+        "@types/marked": "^4.0.2",
         "@types/spotify-web-api-node": "^5.0.7",
         "autoprefixer": "^10.4.2",
         "dotenv": "^16.0.0",
