--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
         "isolatedModules": false,
         "noEmit": true,
         "jsx": "react-jsx",
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "baseUrl": "./"
+        // "paths": {
+        //     "*": ["./src/lib/*"]
+        // }
     },
-    "include": ["src"]
+    "include": ["src", "typings.d.ts"],
+    "exclude": ["node_modules"]
 }
