--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-spring": "8.0.5",
         "react-text-loop": "^2.3.0",
         "react-transition-group": "1.x",
+        "sass": "^1.49.9",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4"
     },
