--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
                   submodules: true # Fetch Hugo themes (true OR recursive)
                   fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
+            - name: Download
+
             - name: Setup Hugo
               uses: peaceiris/actions-hugo@v2
               with:
