--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/kugo"]
     path = themes/kugo
-    url = git://github.com/k2on/kugo.git
+    url = git://github.com:k2on/kugo.git
