--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
               run: hugo --minify
 
             - name: Add CNAME
-              run: echo koon.dev>CNAME
+              run: echo koon.dev>public/CNAME
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
